--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,22 +13,23 @@ jobs:
     - uses: actions/checkout@v1
 
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - name: Use Node.js 10.x
+      uses: actions/setup-node@v1
       with:
-        node-version: '14'
+        node-version: 10.x
 
 
     - name: do autosidebar
       run: |
        node ./auto.js
-       ls
        
-    - name: Commit Changes
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        git add .
-        git commit -m "Auto commit by GitHub Actions"
-        git push
-      working-directory: ./
+    - name: Commit changes
+      uses: EndBug/add-and-commit@v4
+      with:
+        author_name: GITHUB_GENERATOR
+        message: "AUTO GENERATE sidebar"
+        add: "*.md"
+      env:
+        GITHUB_TOKEN: ${{ secrets.autosidebar }}
+        CI: true
+
