--- a/config.json
+++ b/config.json
@@ -35,6 +35,7 @@
     "ignore": [
         "占位可删.txt",
         "file.md",
-        "README.md"
+        "README.md",
+        "index.html"
     ]
 }
