更新自动化脚本 添加人工智能数学基础复习资料

--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
         "大一/集合论与图论",
         "大一/微积分B",
         "大一/中国近现代史纲要",
+        "公共课程/编译系统",
         "公共课程/操作系统",
         "公共课程/概率论与数理统计",
         "公共课程/集合论与图论",
