--- a/config.json
+++ b/config.json
@@ -17,9 +17,11 @@
         "公共课程/数据库系统",
         "公共课程/数理逻辑与近世代数",
         "公共课程/算法设计与分析",
+        "公共课程/软件构造",
         "公共课程/信息安全数学基础",
         "公共课程/形式语言与自动机",
         "公共课程/需求设计与系统分析",
+        "公共课程/数字逻辑",
         "计算机科学与技术/计算机体系结构",
         "计算机科学与技术/计算理论",
         "计算机科学与技术/嵌入式系统设计与实现",
@@ -31,7 +33,10 @@
         "信息安全/密码学",
         "信息安全/软件安全",
         "信息安全/信息内容安全",
-        "选修课程/GPU计算"
+        "选修课程/GPU计算",
+        "选修课程/大学生心理健康",
+        "选修课程/图像处理",
+        "选修课程/自然语言处理"
     ],
     "ignore": [
         "占位可删.txt",
