add zsh 机器学习 计算机组织与体系结构

--- a/config.json
+++ b/config.json
@@ -36,7 +36,8 @@
         "选修课程/GPU计算",
         "选修课程/大学生心理健康",
         "选修课程/图像处理",
-        "选修课程/自然语言处理"
+        "选修课程/自然语言处理",
+        "选修课程/计算机组织与体系结构"
     ],
     "ignore": [
         "占位可删.txt",
