--- a/config.json
+++ b/config.json
@@ -22,6 +22,8 @@
         "公共课程/形式语言与自动机",
         "公共课程/需求设计与系统分析",
         "公共课程/数字逻辑",
+        "公共课程/信息安全概论",
+        "公共课程/计算方法",
         "计算机科学与技术/计算机体系结构",
         "计算机科学与技术/计算理论",
         "计算机科学与技术/嵌入式系统设计与实现",
