--- a/config.json
+++ b/config.json
@@ -24,6 +24,8 @@
         "公共课程/数字逻辑",
         "公共课程/信息安全概论",
         "公共课程/计算方法",
+        "公共课程/马克思主义基本原理",
+        "公共课程/毛泽东思想和中国特色社会主义理论体系概论",
         "计算机科学与技术/计算机体系结构",
         "计算机科学与技术/计算理论",
         "计算机科学与技术/嵌入式系统设计与实现",
